--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .quicksand-font {
@@ -8,135 +7,167 @@
   font-style: normal;
 }
 
+body {
+  width: 90%;
+  margin: 0 auto;
+}
+.hamburger_menu{
+  display: none;
+}
+
 /* nav style */
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.logo{
-    display: flex;
+
+.logo {
+  display: flex;
 }
-.logo-img{
-    padding: 35px 20px 35px 0px; 
+
+.logo-img {
+  padding: 35px 20px 35px 0px;
 }
-.brand{
-    font-weight: 700;
-    font-size: 3rem;
+
+.brand {
+  font-weight: 700;
+  font-size: 3rem;
 }
-.nav-links{
-    display: flex;
+
+.nav-links {
+  display: flex;
 }
-.nav-item{
-    list-style: none;
-    margin-right: 30px;
+
+.nav-item {
+  list-style: none;
+  margin-right: 30px;
 }
-.nav-link{
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 20px;
+
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
 }
-.home-color{
-    color: orange;
+
+.home-color {
+  color: orange;
 }
-.about-color{
-    color: skyblue;
+
+.about-color {
+  color: skyblue;
 }
-.facilities-color{
-    color: #05D4DF;
+
+.facilities-color {
+  color: #05D4DF;
 }
-.admission-color{
-    color: #5D58EF;
+
+.admission-color {
+  color: #5D58EF;
 }
-.contact-btn{
-    background-color: #FF900E;
-    color: white;
-    padding: 15px 60px;
-    font-size: 1.25rem;
-    font-weight: 600;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
+
+.contact-btn {
+  background-color: #FF900E;
+  color: white;
+  padding: 15px 60px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
 }
+
 .contact-btn:hover {
   background-color: #e9b478;
 }
-.navbar, .banner{
-    max-width: 1440px;
-    margin: 0 auto;
+
+.navbar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 /* banner style */
 
-.banner{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.banner-content{
-    margin: 0 auto;
-    text-align: left;
+
+.banner-content {
+  margin: 0 auto;
+  text-align: left;
 }
-.banner-title{
-    font-weight: 700;
-    font-size: 5rem;
-    margin-bottom: 30px;
+
+.banner-title {
+  font-weight: 700;
+  font-size: 5rem;
+  margin-bottom: 30px;
 }
-.em-orange{
-    color: orange;
+
+.em-orange {
+  color: orange;
 }
-.vi-sky-blue{
-    color: skyblue;
+
+.vi-sky-blue {
+  color: skyblue;
 }
-.banner-description{
-    font-weight: 300;
-    font-size: 1.5rem;
-    margin-bottom: 40px;
+
+.banner-description {
+  font-weight: 300;
+  font-size: 1.5rem;
+  margin-bottom: 40px;
 }
-.enroll-button{
-    background-color: #111111;
-    color: white;
-    padding: 15px 60px;
-    font-size: 1.25rem;
-    font-weight: 600;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
+
+.enroll-button {
+  background-color: #111111;
+  color: white;
+  padding: 15px 60px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
 }
+
 .enroll-button:hover {
   background-color: #2b2828;
 }
 
 /* main style */
 
-.main-menu{
+.main-menu {
   background-image: url(assets/bg.png);
   background-repeat: initial;
   background-size: 100%;
 }
-  
+
 /* curriculum style */
 
-.curriculum{
+.curriculum {
   text-align: center;
   max-width: 1440px;
   margin: 0 auto;
 }
-.curriculum h2{
+
+.curriculum h2 {
   font-size: 45px;
   font-weight: bold;
   margin-bottom: 70px;
   color: #000;
 }
-.curriculum-container{
+
+.curriculum-container {
   display: flex;
   justify-content: space-between;
   gap: 50px;
   max-width: 1440px;
   margin: 0 auto;
 }
-.card{
+
+.card {
   background-color: #fff;
   border-radius: 10px;
   padding: 100px 70px;
@@ -145,54 +176,67 @@
   transition: transform 0.3s ease;
   max-width: 300px;
 }
-.card-1{
+
+.card-1 {
   background-image: linear-gradient(180deg, #DEF5FF, white);
 }
-.card-2{
+
+.card-2 {
   background-image: linear-gradient(180deg, #FFF4DC, white);
 }
-.card-3{
+
+.card-3 {
   background-image: linear-gradient(180deg, #F2E8FF, white);
 }
-.card:hover{
+
+.card:hover {
   transform: translateY(-5px);
 }
-.card img{
+
+.card img {
   max-width: 135px;
   margin-bottom: 20px;
 }
-.card h3{
+
+.card h3 {
   font-size: 30px;
   margin-bottom: 25px;
   color: #202020;
 }
-.card p{
+
+.card p {
   font-size: 20px;
   color: #808080;
   margin-bottom: 25px;
 }
-.read-more-1{
+
+.read-more-1 {
   text-decoration: none;
   font-weight: bold;
   color: #64C8FF;
 }
-.read-more-2{
+
+.read-more-2 {
   text-decoration: none;
   font-weight: bold;
   color: #F0AA00;
 }
-.read-more-3{
+
+.read-more-3 {
   text-decoration: none;
   font-weight: bold;
   color: #8700FF;
 }
-.card .read-more:hover{
+
+.card .read-more:hover {
   text-decoration: underline;
 }
-.pagination{
+
+.pagination {
   margin-top: 70px;
 }
-.pagination button{
+
+.pagination button {
   background-color: #ffa500;
   color: #fff;
   border: none;
@@ -204,17 +248,20 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-.pagination button:hover{
+
+.pagination button:hover {
   background-color: #ff8700;
 }
 
 /* stories style */
 
-.stories{
+.stories {
   max-width: 1440px;
   margin: 0 auto;
+  background-image: linear-gradient(#fbfbfc, rgb(252, 233, 233));
 }
-.stories h2{
+
+.stories h2 {
   text-align: center;
   font-size: 36px;
   font-weight: bold;
@@ -222,16 +269,19 @@
   margin-bottom: 80px;
   color: #000000;
 }
-.story-card-container{
+
+.story-card-container {
   display: grid;
   grid-template-columns: 2fr 2fr;
   gap: 20px;
 }
-.stories-container{
+
+.stories-container {
   display: flex;
   gap: 20px;
 }
-.story-card{
+
+.story-card {
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -239,19 +289,21 @@
   transition: transform 0.3s ease;
 }
 
-.story-card .large{
+.story-card .large {
   grid-column: span 2;
 }
-.story-card img{
+
+.story-card img {
   width: 100%;
   height: auto;
   display: block;
 }
 
-.story-info{
+.story-info {
   padding: 30px;
 }
-.story-info .date{
+
+.story-info .date {
   position: relative;
   top: -40px;
   background-color: #32b57d;
@@ -260,19 +312,23 @@
   padding: 15px 30px;
   border-radius: 20px;
 }
-.story-info h3{
+
+.story-info h3 {
   font-size: 18px;
   margin: 10px 0;
   color: #000000;
 }
-.story-info p{
+
+.story-info p {
   font-size: 20px;
   color: #666666;
 }
-.story-card:hover{
+
+.story-card:hover {
   transform: translateY(-5px);
 }
-.view-all{
+
+.view-all {
   display: block;
   margin: auto;
   background-color: #111111;
@@ -286,83 +342,204 @@
   font-size: 1.25rem;
   transition: background-color 0.3s ease;
 }
-.view-all:hover{
+
+.view-all:hover {
   background-color: #555;
 }
 
 /* footer style */
 
-.footer{
+.footer {
   background-color: #00a2ff;
   color: #fff;
-  padding: 40px 20px;
-  text-align: left;
-}
-.footer-content{
-  display: flex;
-  justify-content: space-between;
+  padding: 100px;
+  max-width: auto;
+  justify-items: center;
   align-items: center;
-  margin: 20px;
-  flex-wrap: wrap;
-  gap: 10px;
+  /* justify-content: space-between; */
+  font-size: 25px;
 }
-/* Logo and Description */
-/* .footer-logo{
-  flex: 1;
-  max-width: 300px;
-} */
-.footer-logo p{
+
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  gap: 5%;
+}
+
+.footer-logo p {
   line-height: 1.5;
   font-size: 18px;
-  width: 800px;
+  width: 50%;
 }
-.kids-logo{
+
+.kids-logo {
   display: flex;
   gap: 10px;
- }
-.kids-logo img{
+}
+
+.kids-logo img {
   width: 60px;
   margin-bottom: 10px;
- }
-/* About Links */
-.footer-links{
-  flex: 1;
 }
-.footer-links h3{
+
+/* About Links */
+.footer-links {
+  /* padding-right: 250px; */
+}
+
+.footer-links h3 {
   margin-bottom: 10px;
 }
-.footer-links ul{
+
+.footer-links ul {
   list-style: none;
   padding: 0;
 }
-.footer-links li{
+
+.footer-links li {
   margin: 5px 0;
 }
-.footer-links a{
+
+.footer-links a {
   text-decoration: none;
   color: #fff;
   transition: color 0.3s;
 }
-.footer-links a:hover{
+
+.footer-links a:hover {
   color: #f0c040;
 }
+
 /* Social Media */
-.footer-social{
-  flex: 1;
+.footer-social {
+  /* flex: 1; */
   text-align: left;
 }
-.footer-social h3{
+.footer-social h3 {
   margin-bottom: 10px;
 }
-.social-icons a{
+
+.social-icons a {
   display: inline-block;
   margin: 0 5px;
 }
-.social-icons img{
-  width: 40px;
-  height: 40px;
+.social-icons{
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.social-icons img {
+  width: 30px;
+  height: 30px;
   transition: transform 0.3s ease;
 }
-.social-icons a:hover img{
+
+.social-icons a:hover img {
   transform: scale(1.2);
+}
+.footer-flex-links{
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  gap: 20%;
+}
+.footer-links h3{
+  font-size: 1rem;
+}
+.footer-social h3{
+  font-size: 1rem;
+}
+.footer-links ul>li>a{
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 576px) {
+  body{
+    width: 90%;
+    margin: 0 auto;
+  }
+  .contact-btn{
+    display: none;
+  }
+  .curriculum-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .banner {
+    flex-direction: column;
+  }
+  .stories{
+    margin: 0 auto;
+  }
+  .navbar {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .navbar>ul>li>a {
+    display: none;
+  }
+
+  .story-card-container {
+    grid-template-columns: 1fr;
+  }
+
+  .stories-container {
+    flex-direction: column;
+  }
+
+  .footer-content {
+    flex-direction: column;
+  }
+
+  .footer-social {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .social-icons{
+    flex-direction: row;
+    margin-right: 50%;
+
+  }
+  .footer {
+    width: 75%;
+    margin: 0 auto;
+    margin-left: -10%;
+  }
+  .kids-logo {
+    font-size: 1.8rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .kids-logo h1 {
+    font-size: 1.8rem;
+  }
+
+  .footer-logo p {
+    margin-top: 5%;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-flex-links{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20%;
+    justify-content: space-between;
+  }
+  .hamburger_menu{
+    display: block;
+    font-size: 2rem;
+    color: #000;
+  }
+  .brand{
+    display: none;
+  }
 }
